# google_to_yandex_disks_sync

./: .env.example  .gitignore  README.md  cli.py  config.py  config.yaml  google_drive.py  logger.py  main.py  oauth_callback_server.py  pyproject.toml  run_sync.sh.example  sync.py  sync.yaml.example  sync_pairs.json.example  url_parser.py  yandex_disk.py
docs/: pluggable_architecture.md
src/: __init__.py  factories.py  google_drive.py  logger.py  models.py  protocols.py  sync.py  yandex_disk.py
src/backends/: __init__.py  google.py  local.py  yandex.py
