[project]
name = "disks-sync"
version = "0.1.0"
description = "Синхронизация Google Drive → Яндекс Диск"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "yadisk>=3.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
disks-sync = "main:main"

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "ty>=0.0.24",
]
